# chess-database

./: README.md
chess-db/src/backend/: .gitignore  Dockerfile  config.py  database.py  main.py  models-old.py  models.py  pyproject.toml  repository-old.py  repository.py  requirements.txt
chess-db/src/backend/archive/: parse.py  scrape.py
chess-db/src/backend/middleware/: metrics.py  performance.py
chess-db/src/backend/migrations/: add_metrics_indexes.sql  clear_endpoint_metrics.sql  create_endpoint_metrics_table.sql  create_endpoint_metrics_view.sql  create_move_count_stats_view.sql  create_player_opening_stats_view.sql  initialize_refresh_status.sql  run_migrations.py  v_0.0.1_create_move_count_stats_view.sql  v_0.0.2_create_opening_matches_view.sql  v_0.0.3_create_player_opening_stats_view.sql  v_0.0.4_create_endpoint_metrics_table.sql  v_0.0.5_create_endpoint_metrics_view.sql  v_0.0.6_initialize_refresh_status.sql  v_0.0.7_add_metrics_indexes.sql
chess-db/src/backend/modules/ops/: config.py  encode.py  game_pipeline.py  opening_pipeline.py  parse.py  performance.py  pipeline.py  scrape.py
chess-db/src/backend/repository/: README.md  __init__.py  opening_repository.py  plan.md  requirements.txt
chess-db/src/backend/repository/analysis/: __init__.py  cache.py  queries.py  repository.py  types.py  (+1 more)
chess-db/src/backend/routers/: __init__.py  analysis.py  database.py  games.py  items.py  players.py
chess-db/src/backend/scripts/: refresh_metrics_view.py
chess-db/src/backend/tests/: test_endpoints.py
chess-db/src/backend/utils/: latency_monitor.py
(+134 files in other folders)
